src/components/views/landing-view/landingView.module.css
.landingView {
    overflow-y: hidden;
    padding: 40px 40px 0 40px !important;
}

.content {
    display: flex;
    justify-content: space-between;
}

.content h2 {
    margin-top: 120px;
}

.mobileContent {
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.titleSection {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.title {
    text-align: center;
}

.title::first-line {
    text-align: left;
}


.titleColor {
    color: var(--secondary);
}


.imagePopup {
    position: relative;
    animation: bounce 1s ease-out;
    animation-fill-mode: forwards;  
    height: 100%;
}
  
  
@keyframes bounce {
  0% {
    transform: translateY(100%);
  }
  60% {
    transform: translateY(-5%);
  }
  80% {
    transform: translateY(5%);
  }
  100% {
    transform: translateY(0);
  }
}

.img {
    object-fit: contain;
    max-height: 834px;
}

